--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
     
     <div>
-        <div class="navbar">Navbar</div>
+        <div class="navbar">
+            <div class="logo">
+                <img src="/assets/wines_logo.png" alt="">
+            </div>
+            <div class="nav_links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <button>Contact</button>
+                </ul>
+            </div>
+        </div>
         <div class="slider">Slider</div>
         <div class="contact">
             <div class="office_line">
